# ThreeBodyProblem

./: .gitignore  CMakeLists.txt  README.md
include/: application.h  body.h  settings.h
include/Physics/: physics.h
include/Renderer/: Surface3D.h  camera.h  cubesphere.h  mesh.h  renderer.h
include/glad/: glad.h
shaders/: fObj.glsl  vObj.glsl
src/Physics/: physics.cpp
src/Renderer/: Sphere3D.cpp  Surface3D.cpp  camera.cpp  cubesphere.cpp  renderer.cpp
